clusters/homelab/apps/octelium-storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: octelium-storage
  labels:
    app.kubernetes.io/name: octelium-storage
    app.kubernetes.io/part-of: octelium
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
